finish activity and make half patient
